# kantu

./: README.md
kanc/: Cargo.toml  README.md
kanc/src/: internal_prelude.rs  lib.rs  main.rs
kanc/src/data/: bind_error.rs  bound_ast.rs  cst.rs  file_id.rs  file_tree.rs  fun_recursion_validation_result.rs  light_ast.rs  mod.rs  non_empty_veclike.rs  simplified_ast.rs  text_span.rs  token.rs  type_positivity_validation_result.rs  unsimplified_ast.rs  variant_return_type_validation_result.rs
kanc/src/data/node_equality_checker/: impl_into_semantic_id.rs
kanc/src/data/node_registry/: mod.rs  non_empty_list_id.rs  remove_id.rs  tagged_union_ids.rs
kanc/src/processing/: format_unsimplified.rs  lex.rs  lighten_ast.rs  mod.rs  simplify_ast.rs  validate_variant_return_types.rs
kanc/src/processing/bind_type_independent/: context.rs  mod.rs
kanc/src/processing/generate_code/: mod.rs
kanc/src/processing/parse/: finished.rs  mod.rs  unfinished.rs
kanc/src/processing/test_utils/: expand_lightened.rs  format.rs
kanc/src/processing/type_check/: context.rs  eval.rs  misc.rs  mod.rs  substitute.rs  verify_expression_is_visibility.rs  without_spans.rs
kanc/src/processing/validate_fun_recursion/: context.rs  mod.rs
kanc/src/processing/validate_type_positivity/: context.rs  misc.rs  mod.rs  trust_cache.rs
kanc/src/processing/xparse/: mod.rs
kanc/src/processing/yascl/: README.md  parse.rs
kanc/src/processing/yscl/: README.md  parse.rs  tree.rs
kanc/src/tests/: mod.rs
kanc/src/tests/e2e_dry_run/: mod.rs  utils.rs
kanc/src/tests/integration/: mod.rs
(+1112 files in other folders)
